# =============================================================================
#  R E P S   ·   pretty-lang
# =============================================================================
[package]
name    = "pretty-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "AST/CST to source pretty-printer and formatter core."

# Keywords (5 max)
keywords = ["compiler", "language", "formatter", "pretty", "pretty-print"]

# Categories
categories = ["development-tools", "development-tools::build-utils"]

# Links
homepage      = "https://github.com/jamesgober/pretty-lang"
repository    = "https://github.com/jamesgober/pretty-lang"
documentation = "https://docs.rs/pretty-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pretty_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# `std` adds the `io::Write` renderer (`Doc::render_writer`). The crate core is
# `no_std` + `alloc`; disable default features to build without std.
std = []


# DEPENDENCIES
# #################################
[dependencies]


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
